package br.edu.iff.ccc.DeskGo.entities;

public enum Caracteristica {
    JANELA,
    TOMADA,
    SILENCIOSO,
    DUPLA
}
