package br.edu.iff.ccc.DeskGo.entities;

public enum Perfil {
    USUARIO,
    GESTOR
}