package br.edu.iff.ccc.DeskGo.entities;

public enum StatusEstacao {
    ATIVO,
    INATIVO,
    MANUTENCAO
}
